# BindCpu

app/: build.gradle
app/src/androidTest/java/com/sensetime/bindcpu/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  affinity.cpp
app/src/main/java/com/sensetime/bindcpu/: BindToCpu.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/sensetime/bindcpu/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
